cmake_minimum_required(VERSION 3.29)
project(c___fundamentals)

set(CMAKE_CXX_STANDARD 14)

add_executable(c___fundamentals
    arrays/main.cpp
    assert/main.cpp
    cmath/main.cpp
    compund_statements/main.cpp
    data_types/main.cpp
    functions/main.cpp
    loops/main.cpp
    pass_by_reference/main.cpp
    practice/main.cpp
    rational_operators/main.cpp
    reading_files/main.cpp
    sorting_arrays/main.cpp
    strings/main.cpp
    structs/main.cpp
    switch_statements/main.cpp
    two_dimensional_array/main.cpp
    type_conversion/main.cpp)
